--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
             <section>
                 <ul>
                     <h2>Works</h2>
-                    <li><a href="madLibs#">Mad Libs</a></li>
+                    <li><a href="madLibs/index.html">Mad Libs</a></li>
+                    <li><a href="quizProgram/index.html">Quiz</a></li>
+                    <li><a href="eightBall/eightBall.html">Magic 8 Ball</a></li>
+                    <li><a href="#">Random Password</a></li>
                 </ul>
             </section>
         </div>
