--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Test</title>
+        <title>Portfolio</title>
         <link href="css/style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
