--- a/eightBall/eightBall.html
+++ b/eightBall/eightBall.html
@@ -2,9 +2,18 @@
 <html>
 <head>
     <title>8 Ball</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
-    
 <body>
-    <h1>Magic 8-Ball project</h1>
+    <a href="../index.html"><h1>Magic 8-Ball project</h1></a>
+    <img src="visuals/Emojione_1F3B1.svg.png">
+    <h2>Ask your question!</h2>
+   
+    <h2 id="quest2"></h2>
+    <h2 id="answer"></h2>
+    <input id="quest" placeholder="Ask your question!">
+    
+    <button id="enter">ENTER</button>
+    <script src="app.js"></script>
 </body>
 </html>
