--- a/mmp310/eightBall/eightBall.html
+++ b/mmp310/eightBall/eightBall.html
@@ -5,10 +5,15 @@
     <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <h1>Magic 8-Ball project</h1>
-    <img src="http://via.placeholder.com/300x300">
-    <P>Ask your question!</P>
-    <input placeholder="Ask your question!">
-    <button>E-N-T-E-R</button>
+    <a href="../index.html"><h1>Magic 8-Ball project</h1></a>
+    <img src="visuals/Emojione_1F3B1.svg.png">
+    <h2>Ask your question!</h2>
+   
+    <h2 id="quest2"></h2>
+    <h2 id="answer"></h2>
+    <input id="quest" placeholder="Ask your question!">
+    
+    <button id="enter">ENTER</button>
+    <script src="app.js"></script>
 </body>
 </html>
