--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Portfolio</title>
+        <title>// Portfolio</title>
         <link href="css/style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <p>MMP 310 Class Portfolio</p>
-        <img src="visuals/IMG_1771.jpg" alt="blur" style="300x300">
-        
-        <p>Works</p>
-        
-        <a href="madLibs/index.html"><p>Mad Libs</p></a>
-        <a href="quizProgram/index.html"><p>Quiz</p></a>
-        <a href="eightBall/eightBall.html"><p>Magic 8 Ball</p></a>
-        <a href="#"><p>Random Password</p></a>
+<!--Image-->
+        <img src="visuals/face.jpg" alt="blur" style="300x300">
+<!--Works header-->
+        <p>WORKS</p>
+<!--Links 2 my stuff-->
+        <a href="madLibs/index.html"><p>+ Mad Libs</p></a>
+        <a href="quizProgram/index.html"><p>+ Quiz</p></a>
+        <a href="eightBall/eightBall.html"><p>+ Magic 8 Ball</p></a>
+        <a href="randomPass/index.html"><p>+ Random Password</p></a>
+        <a href="taskList/index.html"><p>+ To-do List</p></a>
     </body> 
 </html>
