--- a/taskList/index.html
+++ b/taskList/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>// Task</title>
         <link href="css/style.css" type="text/css" rel="stylesheet"> 
     </head>
     <body>
-        <h1>To-do List</h1>
-        <input id="txt" placeholder="please enter a task">
-        <button id="add">ENTER</button>
-        <p id="demo"></p>
+<!--Header-->
+        <header>
+            <h1>A To-do List </h1>
+        </header>
+<!--Section-->
+        <section>
+<!--Text input-->
+            <input id="txt" placeholder="please enter a task">
+<!--Button-->
+            <button id="add">ADD</button>
+        </section>
+<!--Button-->
+        <ul id="tasks">
+            <li>Go to the movies</li>
+        </ul>
+    
     <script src="app.js"></script>
     </body>
 </html>
