--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <a href="eightBall/eightBall.html"><p>+ Magic 8 Ball</p></a>
         <a href="randomPass/index.html"><p>+ Random Password</p></a>
         <a href="taskList/index.html"><p>+ To-do List</p></a>
+        <a href="comic/index.html"><p>+ ComiX</p></a>
     </body> 
 </html>
