--- a/taskList/index.html
+++ b/taskList/index.html
@@ -18,6 +18,7 @@
         </section>
 <!--Button-->
         <ul id="tasks">
+            <li>Go to the movies</li>
         </ul>
     
     <script src="app.js"></script>
