--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         <a href="randomPass/index.html"><p>+ Random Password</p></a>
         <a href="taskList/index.html"><p>+ To-do List</p></a>
         <a href="comic/index.html"><p>+ ComiX</p></a>
+        <a href="match2/index.html"><p>+ Match</p></a>
     </body> 
 </html>
