--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <a href="taskList/index.html"><p>+ To-do List</p></a>
         <a href="comic/index.html"><p>+ ComiX</p></a>
         <a href="match2/index.html"><p>+ Match</p></a>
+        <a href="final/index.html"><p>+ Typing</p></a>
     </body> 
 </html>
