--- a/match2/index.html
+++ b/match2/index.html
@@ -11,6 +11,7 @@
             <h2>GET EVERY MATCH IN 6 TRIES</h2>
             <br>
             <input type="text" id="query" placeholder="Search images">
+            <p id="test"></p>
             <div id="game"></div>
             <div class="results">
                 <p class="results" id="results1"></p>
