--- a/final/index.html
+++ b/final/index.html
@@ -6,22 +6,14 @@
     </head>
     <body>
         <div id="container">
-            <h1>Typing txt</h1>
-            <h2>Type all of the words that appear on the screen. When the words reach the top of the screen, you'll take damage. When your life reaches zero the game is over.</h2>
-            
+            <h1>Sample Txt</h1>
+            <p>Type the words that appear on the screen.</p>
             <button id="action">ACTION</button>
-            <div id="playingField">
-                <p id="objective"></p>
+            <div id="playField">
+                <p id="wordOne"></p>
+                <input type="text" placeholder="" id="wordTwo">
             </div>
-            <span id="countdown"></span>
-            <!--<div id="results">
-                <p>words completed - 25</p>
-                <p>time - 5:00</p>
-                <p>Longest word - Dinosaur </p>
-            </div>-->
-            <!--<p id="test"></p> Testing to see if word display randomly-->
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-            <script src="app.js"></script>
         </div>
+        <script src="app.js"></script>
     </body>
 </html>
